--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-shadow: rgba(0, 0, 0, 0.7);
+  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
 }
 /* Black background for parent */
 body {
-  background: black;
+  background: linear-gradient(
+    rgba(255, 255, 255, 1),
+    rgb(250, 248, 248),
+    rgb(148, 148, 150)
+  );
 }
 /* Fixed NavBar with Links */
 div.navbar {
-  background: black;
-  min-height: 8vh;
+  background: #044343;
+  min-height: 3.5%;
   width: 100%;
   margin-top: 0;
   align-items: center;
@@ -23,17 +29,17 @@ div.navbar {
   left: 0;
   opacity: 0.6;
 }
+/* Navbar Links List */
 li {
+  border-left: 0.1rem solid #e4e4e4;
   float: left;
   display: inline;
-  padding-inline-start: 20%;
-  margin-top: 1.5%;
+  margin-block-start: auto;
+  padding: 0.5rem;
 }
+/* Links in Navbar */
 a {
-  color: white;
-  /* background: rgb(0, 0, 0); */
-  /* border: black; */
-  /* border-radius: 5%; */
+  color: #e4e4e4;
   text-decoration: none;
   font-size: 1.5rem;
   font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
@@ -41,46 +47,59 @@ a {
 /* Header fixed photo */
 div.headerPhoto {
   min-height: 65vh;
-  color: white;
+  color: #e4e4e4;
+  outline: 0.2rem solid #044343;
+  outline-offset: +5px;
 }
+/* Large Anvil on page */
 .headerPhoto {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0.05)),
     url(./images/anvilPexels.jpg) center bottom/cover no-repeat fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: rgba(0, 0, 0, 0.5);
   font-size: 1.5rem;
   font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
 }
-
-div.paraOne,
-div.paraTwo,
-div.paraThree {
-  min-height: 50vh;
-  width: 33%;
-  float: left;
-  border: 0.1rem solid black;
-  display: flex;
-  align-items: center;
-  text-shadow: rgba(0, 0, 0, 0.5);
-  font-size: 0.9rem;
-  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+h1 {
   text-align: center;
-  color: white;
+  letter-spacing: 2px;
 }
-div.paraOne {
-  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.5)),
-    url(./images/bikes.JPG) center/cover no-repeat;
-  margin: 0.1%;
+.profileBike {
+  width: 30vw;
+  margin: 100px auto;
+  position: relative;
 }
-div.paraTwo {
-  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.5)),
-    url(./images/Amara.jpg) center/cover no-repeat;
-  margin: 0.1%;
+.profileBike::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 0.3rem solid #044343;
+  box-sizing: border-box;
+  top: -40px;
+  left: -40px;
+  z-index: -2;
+  transition: all 0.3s linear;
 }
-div.paraThree {
-  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.5)),
-    url(./images/profile.JPG) center top/cover no-repeat;
-  margin: 0.1%;
+.profileBike::after {
+  content: "";
+  background: #04434354;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  box-sizing: border-box;
+  top: -20px;
+  left: -20px;
+  z-index: -1;
+  transition: all 0.3s linear;
+}
+.profileBike:hover::after,
+.profileBike:hover::before {
+  top: 0;
+  left: 0;
+}
+img {
+  width: 100%;
+  display: block;
 }
