--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ a {
   font-size: 150%;
   font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
 }
+a:hover {
+  background: rgb(0, 0, 0);
+  border: 0.1rem solid black;
+  border-radius: 8%;
+  color: white;
+}
 /* Header fixed photo */
 div.headerPhoto {
   min-height: 65vh;
@@ -85,7 +91,7 @@ h1 {
 }
 .profileBike::after {
   content: "";
-  background: #04434354;
+  background: linear-gradient(#0443437a, rgba(34, 34, 34, 0.644));
   width: 100%;
   height: 100%;
   position: absolute;
