--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,13 @@ ul {
     box-shadow: var(--shadow-2);
     padding: 2rem 2.5rem;
     margin: 3rem auto;
+    transition: var(--transition);
 }
+
+.form:hover {
+    box-shadow: var(--shadow-4);
+}
+
 .form-label{
     display: block;
     font-size: var(--smallText);
@@ -222,6 +228,16 @@ ul {
     letter-spacing: var(--letterSpacing);
     text-transform: capitalize;
 }
+
+@media screen and (min-width: 996px) {
+    .form {
+        width: 60vw;
+        max-width: 26rem;
+    }
+}
+
+/*  more global styles  */
+
 .underline {
     height: 0.5rem;
     width: 30%;
@@ -670,4 +686,101 @@ Footer
 }
 .social-icon:hover {
     color: var(--white);
+}
+
+/* 
+============
+CONTACT PAGE contact.html
+============
+*/
+
+.contact-header {
+    height: 10rem;
+    max-height: 20vh;
+    background: var(--clr-grey-900);
+    display: grid;
+    place-items: center;
+    box-shadow: var(--shadow-3);
+}
+.logo-center {
+    color: var(--clr-primary-500);
+    text-shadow: 0px 1px 3px var(--black);
+    font-weight: bold;
+    letter-spacing: var(--letterSpacing);
+}
+.logo-center span {
+    text-shadow: none;
+    color: var(--white);
+}
+
+.contact-underline {
+    width: 12rem;
+    background: linear-gradient(to left, var(--clr-primary-200), var(--clr-grey-900));
+    margin-top: -1.2rem;
+}
+
+.contact-center {
+    display: grid;
+    gap: 3rem 3rem;
+    place-items: center;
+    align-items: center;
+}
+
+@media screen and (min-width: 996px) {
+    .contact-center{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+.contact-container {
+    width: 80vw;
+    height: 35.5rem;
+    background: var(--white);
+    display: grid;
+    place-items: center;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 2rem 2rem;
+    border-radius: var(--borderRadius);
+    box-shadow: var(--shadow-2);
+    transition: var(--transition);
+}
+
+.contact-container h3 {
+    background: red;
+}
+
+.contact-container a {
+    color: var(--clr-primary-500);
+}
+
+.contact-container:hover {
+    box-shadow: var(--shadow-4);
+}
+
+@media screen and (min-width: 996px) {
+    .contact-container {
+        max-width: 26rem;
+    }
+    .form {
+        height: 35.5rem;
+    }
+}
+
+.contact-btn {
+  background: none;
+  color: var(--clr-primary-200);
+  box-shadow: none;
+  font-size: 4rem;
+  margin-bottom: -1.5rem;
+}
+.contact-btn a{
+    color: inherit;
+}
+.contact-btn:hover {
+    transform: scale(1.2) rotate(360deg);
+    color: var(--clr-primary-900);
+    background: none;
+   
 }
