--- a/styles.css
+++ b/styles.css
@@ -620,7 +620,7 @@ Skills section
   width: 10rem;
   margin-bottom: 4rem;
 }
-.single-project {
+.single-projects {
   min-height: 30rem;
   margin-top: 3rem;
   background: var(--white);
